--- a/akcio.html
+++ b/akcio.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akcióink</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <a href="etlap.html">Étlap</a>
-    <a href="akcio.html">Akció</a>
-    <a href="elerhetoseg.html">Elérhetőség</a>
+    <nav>
+        <ul>
+            <li>
+                <a href="etlap.html">Étlap</a>
+            </li>
+            <li>
+                <a href="akcio.html">Akció</a>
+            </li>
+            <li>
+                <a href="elerhetoseg.html">Elérhetőség</a>
+            </li>
+            <li>
+                <a href="urlap.html">Rendelés</a>
+            </li>
+        </ul>
+    </nav>
     <h1>Akcióink</h1>
-    <h2>Kérd menüben</h2>
-    <p>Kérd ezt és ezt <img src="images/47419457_m.jpg" alt="burger"></p>
-    <h2>Gyereknapi akció</h2>
-    <p>Gyerekeknek <img src="images/burger-king-vega-burger.jpg" alt="gyerekeknek"></p>
-    <h2>Heti akció</h2>
-    <p>Káposzta és kóla <img src="images/shutterstock_115383397.jpg" alt="buci"></p>
+    <div class="box">
+        <h2>Kérd menüben</h2>
+        <p class="content">
+            <span class="bold">neque, a facintin vemassa</span>
+            vel ultricies. <img src="images/47419457_m.jpg" alt="burger"></p>
+    </div>
+    <div class="box">
+        <h2>Gyereknapi akció</h2>
+        <p class="content">. Proin velit orci, suscipit q.....uis iaculis vitae, uet id massa vel ultricies. 
+            <img src="images/burger-king-vega-burger.jpg" alt="gyerekeknek">
+        </p>
+    </div>
+    <div class="box">
+        <h2>Heti akció</h2>
+        <p>Káposzta és kóla <img src="images/shutterstock_115383397.jpg" alt="buci"></p>
+    </div>
+
 </body>
+
 </html>
