--- a/elerhetoseg.html
+++ b/elerhetoseg.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elérhetőségünk</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <a href="etlap.html">Étlap</a>
-    <a href="akcio.html">Akció</a>
-    <a href="elerhetoseg.html">Elérhetőség</a>
+    <nav>
+        <ul>
+            <li>
+                <a href="etlap.html">Étlap</a>
+            </li>
+            <li>
+                 <a href="akcio.html">Akció</a>
+            </li>
+            <li>
+                 <a href="elerhetoseg.html">Elérhetőség</a>
+            </li>
+            <li>
+                <a href="urlap.html">Rendelés</a>
+            </li>
+        </ul>
+    </nav>
     <h1>Elérhetőségünk</h1>
     <h2>Címünk</h2>
     <p>2049 Diósd, Diófasor u. 2/2.</p>
@@ -24,9 +38,8 @@
         <li>Szombat</li>
         <li>Vasárnap</li>
     </ul>
-    <p>Pentektől...</p>
     <h2>Megközelítés</h2>
     <p>xyz</p>
-    <img src="https://sm.ign.com/ign_hu/screenshot/default/budapest_2a6u.png" alt="térkép">
+    <img id="teljes" src="https://sm.ign.com/ign_hu/screenshot/default/budapest_2a6u.png" alt="térkép">
 </body>
 </html>
